--- a/.env
+++ b/.env
@@ -14,4 +14,4 @@ TOKEN_REFRESH_EXPIRE_TIME=24h
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=postgresql://janedoe:mypassword@localhost:5432/mydb
+DATABASE_URL=postgresql://root:root@localhost:5432
