--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,7 @@
 version: '3.6'
+networks: 
+   homelibnetwork: 
+     driver: bridge 
 services:
   app:
     build: ./
@@ -15,3 +18,5 @@ services:
       - POSTGRES_USER=root
     ports:
       - 5432:5432
+    volumes:
+      - ./src/
