--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/mapped-types": "^1.0.1",
+    "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^5.1.1",
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
